@@ -2,7 +2,7 @@ class Conta < ActiveRecord::Base
 
 	belongs_to :apartamento
 	belongs_to :hospede
-#	has_many :itens
+	has_many :aluguel
 
 	def initialize attributes = {}
 		super
